# guessbench

./: .gitignore  DECISIONS.md  README.md  manifest.json  pyproject.toml
data/: anchors.yaml
data/ladders/: analysis.yaml  business_email.yaml  code.yaml  data_transformation.yaml  how_to.yaml
guessbench/: __init__.py  __init__.py.codetree.json  acceptance.py  acceptance.py.codetree.json  cache.py  cache.py.codetree.json  cli.py  cli.py.codetree.json  config.py  config.py.codetree.json  judge_audit.py  judge_audit.py.codetree.json  providers.py  providers.py.codetree.json  report.py  report.py.codetree.json  sampling.py  sampling.py.codetree.json  scoring.py  scoring.py.codetree.json
guessbench/strategies/: __init__.py  __init__.py.codetree.json  base.py  base.py.codetree.json  embedding.py  embedding.py.codetree.json  llm_judge.py  llm_judge.py.codetree.json
tests/: conftest.py  conftest.py.codetree.json  test_acceptance.py  test_acceptance.py.codetree.json  test_cache_and_sampling.py  test_cache_and_sampling.py.codetree.json  test_calibration_e2e.py  test_calibration_e2e.py.codetree.json  test_embedding_strategy.py  test_embedding_strategy.py.codetree.json  test_judge_audit.py  test_judge_audit.py.codetree.json  test_llm_judge.py  test_llm_judge.py.codetree.json  test_report.py  test_report.py.codetree.json  test_scoring.py  test_scoring.py.codetree.json
